gitignore 수정 및 코드 갱신

--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -148,6 +148,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 지역코드 목록"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
@@ -474,97 +482,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 101,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['쌀', '현미', '찹쌀', '보리쌀', '콩', '땅콩', '혼식곡', '배추', '상추', '시금치', '양배추', '미나리', '깻잎', '부추', '무', '열무', '당근', '감자', '고구마', '도라지', '콩나물', '버섯', '오이', '풋고추', '호박', '가지', '토마토', '파', '양파', '마늘', '브로콜리', '고사리', '파프리카', '생강', '사과', '배', '복숭아', '포도', '밤', '감', '귤', '오렌지', '참외', '수박', '딸기', '바나나', '키위'] \n",
-      "\n",
-      "47\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0    True\n",
-       "1    True\n",
-       "2    True\n",
-       "3    True\n",
-       "4    True\n",
-       "5    True\n",
-       "6    True\n",
-       "7    True\n",
-       "8    True\n",
-       "9    True\n",
-       "Name: 주산지_작물명, dtype: bool"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0       True\n",
-       "1       True\n",
-       "2       True\n",
-       "3       True\n",
-       "4       True\n",
-       "       ...  \n",
-       "676     True\n",
-       "677     True\n",
-       "678    False\n",
-       "679    False\n",
-       "680    False\n",
-       "Name: 주산지_작물명, Length: 681, dtype: bool"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "# crop_list에 있는 작물만\n",
-    "import definitions\n",
-    "crop_list = definitions.crop_list\n",
-    "print(crop_list, \"\\n\")\n",
-    "print(len(crop_list))\n",
-    "\n",
-    "\n",
-    "df_code_filtered = df_code_raw[\"주산지_작물명\"].isin(crop_list)\n",
-    "display(df_code_filtered.head(10))\n",
-    "display(df_code_filtered)"
+    "### 탐색"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'사과', '쌀', '배', '시금치', '양파', '당근', '양배추', '포도', '감자', '미나리', '호박', '배추', '콩', '깻잎', '풋고추', '생강', '마늘', '열무', '무', '오이', '고구마', '땅콩', '복숭아'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = df_code_raw[\"주산지_작물명\"].unique()\n",
-    "corp_list\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(set(corp_list) & set(a))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -580,6 +507,7 @@
     "# 같으면 글자 수 맞출필요 없음.\n",
     "\n",
     "df = df_code_raw.copy()\n",
+    "\n",
     "print(\n",
     "    len(df[\"지역_아이디\"].unique())\n",
     "    == len(df[df[\"지역_아이디\"].astype(str).str.len() == 10][\"지역_아이디\"].unique())\n",
@@ -588,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -610,22 +538,25 @@
     }
    ],
    "source": [
-    "df = df_code_raw.copy()\n",
-    "df = df[df[\"주산지_작물명\"] == \"양배추\"][\"지역_아이디\"]\n",
-    "print(df.unique())\n",
+    "# 한 품목에 대한 id 탐색\n",
+    "print(df[df[\"주산지_작물명\"] == \"양배추\"][\"지역_아이디\"].unique())\n",
     "print()\n",
-    "df = df_code_raw.copy()\n",
-    "df = df[df[\"주산지_작물명\"].isin([\"양배추\"])][\"지역_아이디\"]\n",
-    "print(df.unique())\n",
+    "print(df[df[\"주산지_작물명\"].isin([\"양배추\"])][\"지역_아이디\"].unique())\n",
     "print()\n",
-    "df = df_code_raw.copy()\n",
-    "df = df[df[\"주산지_작물명\"] == \"양배추\"][\"주산지_작물_특성_아이디\"]\n",
-    "print(df.unique())"
+    "print(df[df[\"주산지_작물명\"] == \"양배추\"][\"주산지_작물_특성_아이디\"].unique())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### df_code_filtered : crop_list에 있는 품목만 데이터프레임으로 만들기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -636,30 +567,171 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import definitions\n",
+    "\n",
+    "crop_list = definitions.crop_list\n",
+    "print(crop_list)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "only list-like objects are allowed to be passed to isin(), you passed a [str]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m corp_list:\n\u001b[1;32m----> 2\u001b[0m     df[df\u001b[39m.\u001b[39;49misin(i)]\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\core\\series.py:5566\u001b[0m, in \u001b[0;36mSeries.isin\u001b[1;34m(self, values)\u001b[0m\n\u001b[0;32m   5493\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39misin\u001b[39m(\u001b[39mself\u001b[39m, values) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Series:\n\u001b[0;32m   5494\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   5495\u001b[0m \u001b[39m    Whether elements in Series are contained in `values`.\u001b[39;00m\n\u001b[0;32m   5496\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5564\u001b[0m \u001b[39m    dtype: bool\u001b[39;00m\n\u001b[0;32m   5565\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 5566\u001b[0m     result \u001b[39m=\u001b[39m algorithms\u001b[39m.\u001b[39;49misin(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_values, values)\n\u001b[0;32m   5567\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_constructor(result, index\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex)\u001b[39m.\u001b[39m__finalize__(\n\u001b[0;32m   5568\u001b[0m         \u001b[39mself\u001b[39m, method\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39misin\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   5569\u001b[0m     )\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\core\\algorithms.py:457\u001b[0m, in \u001b[0;36misin\u001b[1;34m(comps, values)\u001b[0m\n\u001b[0;32m    452\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[0;32m    453\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39monly list-like objects are allowed to be passed \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    454\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mto isin(), you passed a [\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(comps)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    455\u001b[0m     )\n\u001b[0;32m    456\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_list_like(values):\n\u001b[1;32m--> 457\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[0;32m    458\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39monly list-like objects are allowed to be passed \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    459\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mto isin(), you passed a [\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(values)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    460\u001b[0m     )\n\u001b[0;32m    462\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(values, (ABCIndex, ABCSeries, ABCExtensionArray, np\u001b[39m.\u001b[39mndarray)):\n\u001b[0;32m    463\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_signed_integer_dtype(comps):\n\u001b[0;32m    464\u001b[0m         \u001b[39m# GH#46485 Use object to avoid upcast to float64 later\u001b[39;00m\n\u001b[0;32m    465\u001b[0m         \u001b[39m# TODO: Share with _find_common_type_compat\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: only list-like objects are allowed to be passed to isin(), you passed a [str]"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>지역_아이디</th>\n",
+       "      <th>주산지_작물_특성_아이디</th>\n",
+       "      <th>주산지_작물명</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4211000000</td>\n",
+       "      <td>PA360101</td>\n",
+       "      <td>호박</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4211000000</td>\n",
+       "      <td>PA360201</td>\n",
+       "      <td>호박</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4272000000</td>\n",
+       "      <td>PA360101</td>\n",
+       "      <td>호박</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4272000000</td>\n",
+       "      <td>PA360201</td>\n",
+       "      <td>호박</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4278000000</td>\n",
+       "      <td>PA360201</td>\n",
+       "      <td>호박</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>673</th>\n",
+       "      <td>4827000000</td>\n",
+       "      <td>PA020301</td>\n",
+       "      <td>감자</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>674</th>\n",
+       "      <td>4887000000</td>\n",
+       "      <td>PA020101</td>\n",
+       "      <td>감자</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>675</th>\n",
+       "      <td>4888000000</td>\n",
+       "      <td>PA020101</td>\n",
+       "      <td>감자</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>676</th>\n",
+       "      <td>5011000000</td>\n",
+       "      <td>PA020301</td>\n",
+       "      <td>감자</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>677</th>\n",
+       "      <td>5013000000</td>\n",
+       "      <td>PA020301</td>\n",
+       "      <td>감자</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>508 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         지역_아이디 주산지_작물_특성_아이디 주산지_작물명\n",
+       "0    4211000000      PA360101      호박\n",
+       "1    4211000000      PA360201      호박\n",
+       "2    4272000000      PA360101      호박\n",
+       "3    4272000000      PA360201      호박\n",
+       "4    4278000000      PA360201      호박\n",
+       "..          ...           ...     ...\n",
+       "673  4827000000      PA020301      감자\n",
+       "674  4887000000      PA020101      감자\n",
+       "675  4888000000      PA020101      감자\n",
+       "676  5011000000      PA020301      감자\n",
+       "677  5013000000      PA020301      감자\n",
+       "\n",
+       "[508 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_code_filtered = df_code_raw.copy()\n",
+    "\n",
+    "df_code_filtered = df[df[\"주산지_작물명\"].isin(crop_list)][[\"지역_아이디\", \"주산지_작물_특성_아이디\", \"주산지_작물명\"]]\n",
+    "display(df_code_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
    "source": [
-    "for i in corp_list:\n",
-    "    df[df.isin(i)]"
+    "# FmlandWthrInfo_code.csv\n",
+    "import os\n",
+    "file_name = \"FmlandWthrInfo_code.csv\"\n",
+    "df_code_filtered.to_csv(f\"{data_path}{file_name}\", index=False)\n",
+    "print(file_name in os.listdir(data_path))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### fnc : 주산지_작물명 -> (지역_아이디, 주산지_작물_특성_아이디)"
    ]
   },
   {
@@ -667,33 +739,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['총지수', '농축수산물', '(농산물)곡물', '쌀', '현미', '찹쌀', '보리쌀', '콩', '땅콩',\n",
-       "       '혼식곡', '(농산물)채소', '배추', '상추', '시금치', '양배추', '미나리', '깻잎', '부추', '무',\n",
-       "       '열무', '당근', '감자', '고구마', '도라지', '콩나물', '버섯', '오이', '풋고추', '호박',\n",
-       "       '가지', '토마토', '파', '양파', '마늘', '브로콜리', '고사리', '파프리카', '생강',\n",
-       "       '(농산물)과실', '사과', '배', '복숭아', '포도', '밤', '감', '귤', '오렌지', '참외',\n",
-       "       '수박', '딸기', '바나나', '키위'], dtype=object)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "file_path = f\"{data_path}소비자물가지수_품목별_연도별_월별_filtered.csv\"\n",
-    "df_filtered = pd.read_csv(file_path)\n",
-    "df_filtered[\"품목별\"].map(lambda x:x.strip(('\\u3000'))).values"
+    "def temp(crop_name, file_path=f\"../data/FmlandWthrInfo_code.csv\"):\n",
+    "    df = pd.read_csv(file_path, index_col=False)\n",
+    "    \n",
+    "\n",
+    "temp(\"감자\")"
    ]
   },
   {
