--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -742,7 +742,7 @@
    "source": [
     "def temp(crop_name, file_path=f\"../data/FmlandWthrInfo_code.csv\"):\n",
     "    df = pd.read_csv(file_path, index_col=False)\n",
-    "    \n",
+    "    df = df[df[\"\"] == crop_name]\n",
     "\n",
     "temp(\"감자\")"
    ]
