--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -356,84 +356,84 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>4275000000</td>\n",
-       "      <td>영월</td>\n",
-       "      <td>PA330101</td>\n",
-       "      <td>적두</td>\n",
-       "      <td>팥</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>570</th>\n",
-       "      <td>4374000000</td>\n",
-       "      <td>영동</td>\n",
+       "      <th>577</th>\n",
+       "      <td>4792000000</td>\n",
+       "      <td>봉화</td>\n",
        "      <td>PA080101</td>\n",
        "      <td>봄</td>\n",
        "      <td>당근</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>552</th>\n",
-       "      <td>2614000000</td>\n",
-       "      <td>서구</td>\n",
-       "      <td>PA080301</td>\n",
-       "      <td>가을</td>\n",
-       "      <td>당근</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118</th>\n",
+       "      <th>248</th>\n",
        "      <td>4772000000</td>\n",
        "      <td>군위</td>\n",
-       "      <td>PA280201</td>\n",
-       "      <td>다다기계통</td>\n",
-       "      <td>오이</td>\n",
+       "      <td>PA200101</td>\n",
+       "      <td>-</td>\n",
+       "      <td>사과</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>323</th>\n",
-       "      <td>4682000000</td>\n",
-       "      <td>해남</td>\n",
-       "      <td>PA170401</td>\n",
-       "      <td>가을</td>\n",
-       "      <td>배추</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121</th>\n",
-       "      <td>4827000000</td>\n",
-       "      <td>밀양</td>\n",
-       "      <td>PA280101</td>\n",
-       "      <td>가시계통</td>\n",
-       "      <td>오이</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>284</th>\n",
-       "      <td>2653000000</td>\n",
-       "      <td>사상구</td>\n",
-       "      <td>PA170201</td>\n",
-       "      <td>봄</td>\n",
-       "      <td>배추</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>2717000000</td>\n",
-       "      <td>서구</td>\n",
-       "      <td>PA240101</td>\n",
-       "      <td>봄</td>\n",
-       "      <td>양배추</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>309</th>\n",
-       "      <td>4420000000</td>\n",
-       "      <td>아산</td>\n",
+       "      <th>327</th>\n",
+       "      <td>4690000000</td>\n",
+       "      <td>진도</td>\n",
        "      <td>PA170101</td>\n",
        "      <td>겨울</td>\n",
        "      <td>배추</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>587</th>\n",
-       "      <td>4713000000</td>\n",
-       "      <td>경주</td>\n",
-       "      <td>PA070101</td>\n",
+       "      <th>426</th>\n",
+       "      <td>2914000000</td>\n",
+       "      <td>서구</td>\n",
+       "      <td>PA130201</td>\n",
+       "      <td>봄</td>\n",
+       "      <td>무</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>4480000000</td>\n",
+       "      <td>홍성</td>\n",
+       "      <td>PA020101</td>\n",
+       "      <td>봄</td>\n",
+       "      <td>감자</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>5011000000</td>\n",
+       "      <td>제주</td>\n",
+       "      <td>PA280101</td>\n",
+       "      <td>가시계통</td>\n",
+       "      <td>오이</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>417</th>\n",
+       "      <td>2714000000</td>\n",
+       "      <td>동구</td>\n",
+       "      <td>PA130401</td>\n",
+       "      <td>가을</td>\n",
+       "      <td>무</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>4277000000</td>\n",
+       "      <td>정선</td>\n",
+       "      <td>PA330101</td>\n",
+       "      <td>적두</td>\n",
+       "      <td>팥</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>4617000000</td>\n",
+       "      <td>나주</td>\n",
+       "      <td>PA160101</td>\n",
        "      <td>-</td>\n",
-       "      <td>단감</td>\n",
+       "      <td>배</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>4690000000</td>\n",
+       "      <td>진도</td>\n",
+       "      <td>PA090401</td>\n",
+       "      <td>겨울대파</td>\n",
+       "      <td>대파</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -441,16 +441,16 @@
       ],
       "text/plain": [
        "         지역_아이디 지역_이름 주산지_작물_특성_아이디 주산지_작물_특성_이름 주산지_작물명\n",
-       "57   4275000000    영월      PA330101           적두       팥\n",
-       "570  4374000000    영동      PA080101            봄      당근\n",
-       "552  2614000000    서구      PA080301           가을      당근\n",
-       "118  4772000000    군위      PA280201        다다기계통      오이\n",
-       "323  4682000000    해남      PA170401           가을      배추\n",
-       "121  4827000000    밀양      PA280101         가시계통      오이\n",
-       "284  2653000000   사상구      PA170201            봄      배추\n",
-       "149  2717000000    서구      PA240101            봄     양배추\n",
-       "309  4420000000    아산      PA170101           겨울      배추\n",
-       "587  4713000000    경주      PA070101            -      단감"
+       "577  4792000000    봉화      PA080101            봄      당근\n",
+       "248  4772000000    군위      PA200101            -      사과\n",
+       "327  4690000000    진도      PA170101           겨울      배추\n",
+       "426  2914000000    서구      PA130201            봄       무\n",
+       "660  4480000000    홍성      PA020101            봄      감자\n",
+       "123  5011000000    제주      PA280101         가시계통      오이\n",
+       "417  2714000000    동구      PA130401           가을       무\n",
+       "58   4277000000    정선      PA330101           적두       팥\n",
+       "353  4617000000    나주      PA160101            -       배\n",
+       "548  4690000000    진도      PA090401         겨울대파      대파"
       ]
      },
      "metadata": {},
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -742,8 +742,8 @@
    "source": [
     "def temp(crop_name, file_path=f\"../data/FmlandWthrInfo_code.csv\"):\n",
     "    df = pd.read_csv(file_path, index_col=False)\n",
-    "    df = df[df[\"\"] == crop_name]\n",
-    "\n",
+    "    df = df[df[\"주산지_작물명\"] == crop_name]\n",
+    "    \n",
     "temp(\"감자\")"
    ]
   },
