--- a/Data Collection/crop_list.ipynb
+++ b/Data Collection/crop_list.ipynb
@@ -139,6 +139,50 @@
     "crop_list = list(set(crop_list_1) & set(crop_list_2))\n",
     "print(crop_list)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 마늘 -> 피마늘\n",
+    "이번 프로젝트에서는 마늘로 통일하기로 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['호박', '고구마', '양파', '무', '배', '배추', '피마늘', '양배추', '시금치', '콩', '땅콩', '풋고추', '오이', '깻잎', '생강', '사과', '포도', '당근', '복숭아', '미나리', '감자', '열무', '쌀']\n"
+     ]
+    }
+   ],
+   "source": [
+    "crop_list[crop_list.index(\"마늘\")] = \"피마늘\"\n",
+    "print(crop_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(crop_list))"
+   ]
   }
  ],
  "metadata": {
