--- a/Data Collection/AgriMarket.ipynb
+++ b/Data Collection/AgriMarket.ipynb
@@ -40,7 +40,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sacer\\miniconda3\\envs\\asd1\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -96,10 +105,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['TB_TAT_KAMIS_PRC_MK_TB-2019.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2018.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2008.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2020.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2009.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2010.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2011.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2005.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2013.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2007.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2006.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2012.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2016.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2017.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2015.csv', 'TB_TAT_KAMIS_PRC_MK_TB-2014.csv']\n"
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [2], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m files_path \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mdata_path\u001b[39m}\u001b[39;00m\u001b[39m/TB_TAT_KAMIS_PRC_MK_TB/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      3\u001b[0m files \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mlistdir(files_path)\n\u001b[1;32m----> 4\u001b[0m files\u001b[39m.\u001b[39;49mremove(\u001b[39m'\u001b[39;49m\u001b[39m.DS_Store\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(files)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
      ]
     }
    ],
@@ -204,187 +217,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>YMD</th>\n",
-       "      <th>Region</th>\n",
-       "      <th>Product</th>\n",
-       "      <th>WR</th>\n",
-       "      <th>Grade</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Y</th>\n",
-       "      <th>M</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>201901</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>단감</td>\n",
-       "      <td>도매</td>\n",
-       "      <td>상품</td>\n",
-       "      <td>33000.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>201901</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>단감</td>\n",
-       "      <td>도매</td>\n",
-       "      <td>중품</td>\n",
-       "      <td>28000.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>201901</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>바나나</td>\n",
-       "      <td>도매</td>\n",
-       "      <td>상품</td>\n",
-       "      <td>22000.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>201901</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>바나나</td>\n",
-       "      <td>도매</td>\n",
-       "      <td>중품</td>\n",
-       "      <td>17000.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>201901</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>참다래</td>\n",
-       "      <td>도매</td>\n",
-       "      <td>상품</td>\n",
-       "      <td>35000.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014738</th>\n",
-       "      <td>201412</td>\n",
-       "      <td>강원</td>\n",
-       "      <td>참깨</td>\n",
-       "      <td>소매</td>\n",
-       "      <td>중품</td>\n",
-       "      <td>2980.0</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014739</th>\n",
-       "      <td>201412</td>\n",
-       "      <td>충북</td>\n",
-       "      <td>참깨</td>\n",
-       "      <td>소매</td>\n",
-       "      <td>중품</td>\n",
-       "      <td>3240.0</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014740</th>\n",
-       "      <td>201412</td>\n",
-       "      <td>전북</td>\n",
-       "      <td>참깨</td>\n",
-       "      <td>소매</td>\n",
-       "      <td>중품</td>\n",
-       "      <td>3000.0</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014741</th>\n",
-       "      <td>201412</td>\n",
-       "      <td>경남</td>\n",
-       "      <td>참깨</td>\n",
-       "      <td>소매</td>\n",
-       "      <td>중품</td>\n",
-       "      <td>3500.0</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014742</th>\n",
-       "      <td>201412</td>\n",
-       "      <td>제주</td>\n",
-       "      <td>참깨</td>\n",
-       "      <td>소매</td>\n",
-       "      <td>중품</td>\n",
-       "      <td>2500.0</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>14237910 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            YMD Region Product  WR Grade    Price     Y   M\n",
-       "0        201901     서울      단감  도매    상품  33000.0  2019   1\n",
-       "1        201901     서울      단감  도매    중품  28000.0  2019   1\n",
-       "2        201901     서울     바나나  도매    상품  22000.0  2019   1\n",
-       "3        201901     서울     바나나  도매    중품  17000.0  2019   1\n",
-       "4        201901     서울     참다래  도매    상품  35000.0  2019   1\n",
-       "...         ...    ...     ...  ..   ...      ...   ...  ..\n",
-       "1014738  201412     강원      참깨  소매    중품   2980.0  2014  12\n",
-       "1014739  201412     충북      참깨  소매    중품   3240.0  2014  12\n",
-       "1014740  201412     전북      참깨  소매    중품   3000.0  2014  12\n",
-       "1014741  201412     경남      참깨  소매    중품   3500.0  2014  12\n",
-       "1014742  201412     제주      참깨  소매    중품   2500.0  2014  12\n",
-       "\n",
-       "[14237910 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1252,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "toc": {
    "base_numbering": 1,
